--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@600&display=swap');
+
+:root {
+    --title: "Inter";
+    --sub-title: "Poppins";
+}
+
+* {
+    padding: 0;
+    margin: 0;
+}
