finalizado a funcao de remover um perfil da lista de perfis

--- a/src/app/banner-profile/banner-profile.component.html
+++ b/src/app/banner-profile/banner-profile.component.html
@@ -1,4 +1,7 @@
 <div class="banner bg-success d-flex justify-content-center flex-column text-center ">
+    <div class="banner-functions">
+        <i class="bi bi-trash" (click)="deleteProfile(id)"></i>
+    </div>
     <div class="banner-image">
         <img [src]="urlImg" alt="imagem profile" class="img-fluid">
     </div>
