--- a/src/app/banner-profile/banner-profile.component.css
+++ b/src/app/banner-profile/banner-profile.component.css
@@ -3,6 +3,18 @@
     margin: 20px;
 }
 
+.banner .banner-functions {
+    display: flex;
+    justify-content: flex-end;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.banner .banner-functions i {
+    color: #fff;
+    font-size: 1.3rem;
+}
+
 .banner .banner-image img {
     border-radius: 100%;
     padding: 20px;
